05_squares/grade.txt
Grading at Thu Jul 16 15:56:58 UTC 2020
Trying to compile your code and link with squares_test.o
squares.c: In function ‘squares’:
squares.c:48:11: error: implicit declaration of function ‘find_max’ [-Werror=implicit-function-declaration]
   int w = find_max(size1, x_offset + size2);
           ^
cc1: all warnings being treated as errors
Could not compile your code

Overall Grade: FAILED
